--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,37 +1,41 @@
-name: CI – Build, Test, Docker (GHCR)
+name: CI – Build, Test, Docker
 
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
+  workflow_dispatch:
 
 jobs:
   build-test-docker:
     runs-on: self-hosted
-
     permissions:
       contents: read
-      packages: write # needed to push to GHCR
-      id-token: write # optional (provenance/signing)
+      packages: write
+      id-token: write
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up JDK 21 (Temurin)
+      - name: Show repo layout (debug)
+        run: |
+          pwd
+          ls -la
+
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "21"
           cache: gradle
 
-      - name: Make wrapper executable (normalize CRLF just in case)
+      - name: Make wrapper executable
         run: |
           sed -i 's/\r$//' gradlew || true
           chmod +x gradlew
 
-      - name: Build with tests (fat JAR via bootJar)
+      - name: Build with tests (fat JAR)
         run: ./gradlew --no-daemon clean test bootJar
 
       - name: Upload fat JAR
@@ -40,22 +44,19 @@ jobs:
           name: app-jar
           path: build/libs/*.jar
           if-no-files-found: error
-          retention-days: 7
 
-      - name: Upload test report (HTML)
+      - name: Upload test report
         uses: actions/upload-artifact@v4
         with:
           name: test-report
           path: build/reports/tests/test/**
-          retention-days: 7
 
-      - name: Set image coordinates
-        id: coords
+      - name: Define image coords
         run: |
           echo "IMAGE=ghcr.io/${{ github.repository }}" >> $GITHUB_ENV
           echo "TAG=${{ github.sha }}" >> $GITHUB_ENV
 
-      - name: Log in to GHCR
+      - name: Login GHCR
         if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v3
         with:
@@ -64,8 +65,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker image
-        run: |
-          docker build -t "$IMAGE:$TAG" -t "$IMAGE:latest" .
+        run: docker build -t "$IMAGE:$TAG" -t "$IMAGE:latest" .
 
       - name: Push Docker image
         if: ${{ github.event_name != 'pull_request' }}
