--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,30 @@ jobs:
         run: |
           pwd
           ls -la
+          echo "--- search for gradlew up to depth 4 ---"
+          find . -maxdepth 4 -name gradlew -print || true
+          echo "--- search for build.gradle(.kts) ---"
+          find . -maxdepth 4 -regex '.*build\.gradle\(\\.kts\)?' -print || true
+
+      # Detect the project directory that contains gradlew (or build.gradle(.kts) as fallback)
+      - name: Detect project directory
+        id: detect
+        shell: bash
+        run: |
+          set -e
+          hit="$(git ls-files | grep -E '(^|/)gradlew$' | head -n1 || true)"
+          if [ -n "$hit" ]; then
+            dir="$(dirname "$hit")"
+          else
+            hit="$(git ls-files | grep -E '(^|/)build\.gradle(\.kts)?$' | head -n1 || true)"
+            dir="$(dirname "$hit")"
+          fi
+          if [ -z "$dir" ]; then
+            echo "No project directory found." >&2
+            exit 1
+          fi
+          echo "PROJECT_DIR=$dir" >> "$GITHUB_ENV"
+          echo "Detected PROJECT_DIR=$dir"
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -30,26 +54,37 @@ jobs:
           java-version: "21"
           cache: gradle
 
-      - name: Make wrapper executable
+      - name: Make wrapper executable (if present)
+        working-directory: ${{ env.PROJECT_DIR }}
         run: |
-          sed -i 's/\r$//' gradlew || true
-          chmod +x gradlew
+          if [ -f gradlew ]; then
+            sed -i 's/\r$//' gradlew || true
+            chmod +x gradlew
+          else
+            echo "gradlew not found; will use 'gradle' CLI"
+          fi
 
       - name: Build with tests (fat JAR)
-        run: ./gradlew --no-daemon clean test bootJar
+        working-directory: ${{ env.PROJECT_DIR }}
+        run: |
+          if [ -f ./gradlew ]; then
+            ./gradlew --no-daemon clean test bootJar
+          else
+            gradle --no-daemon clean test bootJar
+          fi
 
       - name: Upload fat JAR
         uses: actions/upload-artifact@v4
         with:
           name: app-jar
-          path: build/libs/*.jar
+          path: ${{ env.PROJECT_DIR }}/build/libs/*.jar
           if-no-files-found: error
 
       - name: Upload test report
         uses: actions/upload-artifact@v4
         with:
           name: test-report
-          path: build/reports/tests/test/**
+          path: ${{ env.PROJECT_DIR }}/build/reports/tests/test/**
 
       - name: Define image coords
         run: |
@@ -64,7 +99,8 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Docker image
+      - name: Build Docker image (from project dir)
+        working-directory: ${{ env.PROJECT_DIR }}
         run: docker build -t "$IMAGE:$TAG" -t "$IMAGE:latest" .
 
       - name: Push Docker image
