--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,14 +119,16 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           set -euxo pipefail
-          mkdir -p .sonar-cache .sonar-tmp
+          # Create writable dirs inside the mounted workspace
+          mkdir -p .sonar-cache .sonar-tmp .scannerwork
           docker run --rm \
             --user "$(id -u):$(id -g)" \
             -e SONAR_HOST_URL="$SONAR_HOST_URL" \
             -e SONAR_TOKEN="$SONAR_TOKEN" \
             -e SONAR_PROJECT_KEY="$SONAR_PROJECT_KEY" \
             -e SONAR_USER_HOME="/usr/src/.sonar-cache" \
-            -e SONAR_SCANNER_OPTS="-Djava.io.tmpdir=/usr/src/.sonar-tmp" \
+            -e SONAR_SCANNER_OPTS="-Dsonar.scanner.workDirectory=/usr/src/.scannerwork -Djava.io.tmpdir=/usr/src/.sonar-tmp" \
+            -e TMPDIR="/usr/src/.sonar-tmp" \
             -v "$PWD:/usr/src" \
             sonarsource/sonar-scanner-cli:latest
 
