--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,16 +119,13 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           set -euxo pipefail
-          # Create writable dirs inside the mounted workspace
-          mkdir -p .sonar-cache .sonar-tmp .scannerwork
+          # cache under repo for reuse across runs (optional)
+          mkdir -p .sonar-cache
           docker run --rm \
-            --user "$(id -u):$(id -g)" \
             -e SONAR_HOST_URL="$SONAR_HOST_URL" \
             -e SONAR_TOKEN="$SONAR_TOKEN" \
             -e SONAR_PROJECT_KEY="$SONAR_PROJECT_KEY" \
             -e SONAR_USER_HOME="/usr/src/.sonar-cache" \
-            -e SONAR_SCANNER_OPTS="-Dsonar.scanner.workDirectory=/usr/src/.scannerwork -Djava.io.tmpdir=/usr/src/.sonar-tmp" \
-            -e TMPDIR="/usr/src/.sonar-tmp" \
             -v "$PWD:/usr/src" \
             sonarsource/sonar-scanner-cli:latest
 
