--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -239,7 +239,7 @@ jobs:
 
       # ---------- Build DOCS (MkDocs -> site) ----------
       - name: Clean site directory
-        run: rm -rf site
+        run: sudo rm -rf site
         working-directory: ${{ env.PROJECT_DIR }}
       
       - name: Build docs (MkDocs Material via Docker)
