--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -304,6 +304,16 @@ jobs:
           echo "Docs did not become ready in time."
           exit 1
 
+      - name: Verify MkDocs site
+        working-directory: ${{ env.PROJECT_DIR }}
+        run: |
+          if [ ! -f site/index.html ]; then
+          echo "MkDocs did not generate site/index.html"
+          ls -la site
+          exit 1
+          fi
+
+
       # ---------- Tag & Push APP after tests passed ----------
       - name: Tag for team registry (app)
         if: ${{ github.event_name != 'pull_request' }}
