--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -273,7 +273,7 @@ jobs:
       - name: Verify docs baked into image
         run: |
           set -eux
-          docker run --rm "$IMAGE_LOCAL_DOCS:$TAG" sh -c 'ls -la /usr/share/nginx/html && test -f /usr/share/nginx/html/index.html'
+          docker run --rm "$IMAGE_LOCAL_DOCS:$TAG"
 
       - name: Stop old container & free port ${{ env.DOCS_HOST_PORT }} (docs)
         run: |
