--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -273,7 +273,7 @@ jobs:
       - name: Verify docs baked into image
         run: |
           set -eux
-          docker run -d --rm -p "${DOCS_HOST_PORT}:80" "$IMAGE_LOCAL_DOCS:$TAG"
+          docker run -d -p "${DOCS_HOST_PORT}:80" "$IMAGE_LOCAL_DOCS:$TAG"
 
       - name: Stop old container & free port ${{ env.DOCS_HOST_PORT }} (docs)
         run: |
@@ -287,7 +287,8 @@ jobs:
 
       - name: Start docs container
         run: |
-          set -euxo pipefail
+          set -euxo pipefail 
+          docker rm -f "$DOCS_CONTAINER_NAME" || true
           docker run -d \
             --name "$DOCS_CONTAINER_NAME" \
             --restart unless-stopped \
