--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -317,6 +317,13 @@ jobs:
             -o /data/site/doc.pdf \
             /data/site/index.html
           test -f site/doc.pdf && echo "PDF successfully generated."
+          
+      - name: Verify PDF exists in site directory
+        working-directory: ${{ env.PROJECT_DIR }}
+        run: |
+          test -f site/documentation.pdf || { echo "PDF not found!"; exit 1; }
+          echo "PDF file present in site directory."
+  
       # ---------- Tag & Push APP after tests passed ----------
       - name: Tag for team registry (app)
         if: ${{ github.event_name != 'pull_request' }}
