--- a/DevOps/DevOps/Dockerfile.docs
+++ b/DevOps/DevOps/Dockerfile.docs
@@ -2,3 +2,4 @@
 FROM nginx
 # copy the MkDocs output folder created by the CI step:
 COPY site/ /usr/share/nginx/html
+COPY site/doc.pdf /usr/share/nginx/html/
